--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,19 @@
     box-sizing: border-box;
 }
 
+/* Screen-reader only (visually hidden, crawlable by search engines) */
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
+}
+
 /* Navigation */
 .navbar {
     position: relative;
