--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
+/* Inter font loaded via <link> in HTML for better performance */
 
 :root {
     --bg-color: #050505;
